# rp4

./: .gitignore  4rp  4rp.py  MANIFEST.in  README.md  cli.py  client.py  global_settings.json  gui.py  pyproject.toml  requirements.txt  settings.json
.github/workflows/: black.yml  ci-cd.yml
4rp/: client.py
defaults/: global_settings.json  settings.json
rp4/: __main__.py  cli.py  client.py  desktop_shortcut.py  gui.py
rp4/defaults/: global_settings.json
